--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 This is the README. Having a README enables github to provide a description
 in the repo's page.
+
+As an exercise, try forking this repo and adding to this README
